--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=305101854" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3881387000" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- column -->
-   <a class="nonblock nontext clip_frame colelem" id="u94" href="http://youtube.com/relictive"><!-- image --><img class="block" id="u94_img" src="images/font.jpg?crc=3994387687" alt="" data-heightwidthratio="0.9955947136563876" data-image-width="227" data-image-height="226"/></a>
-   <div class="verticalspacer" data-offset-top="355" data-content-above-spacer="363" data-content-below-spacer="137" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clip_frame colelem" id="u104" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter"><!-- image -->
+    <img class="block" id="u104_img" src="images/font-crop-u104.jpg?crc=319324435" alt="" data-heightwidthratio="1.0798319327731092" data-image-width="238" data-image-height="257"/>
+   </div>
+   <div class="verticalspacer" data-offset-top="345" data-content-above-spacer="378" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
