--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="clip_frame colelem" id="u104" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter"><!-- image -->
-    <img class="block" id="u104_img" src="images/font-crop-u104.jpg?crc=319324435" alt="" data-heightwidthratio="1.0798319327731092" data-image-width="238" data-image-height="257"/>
-   </div>
-   <div class="verticalspacer" data-offset-top="345" data-content-above-spacer="378" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <a class="nonblock nontext clip_frame colelem" id="u104" href="http://youtube.com/relictive" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter"><!-- image --><img class="block" id="u104_img" src="images/font-crop-u104.jpg?crc=319324435" alt="" data-heightwidthratio="1.0798319327731092" data-image-width="238" data-image-height="257"/></a>
+   <div class="verticalspacer" data-offset-top="378" data-content-above-spacer="378" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
