--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3881387000" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3952315787" id="pagesheet"/>
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- column -->
-   <a class="nonblock nontext clip_frame colelem" id="u104" href="http://youtube.com/relictive" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter"><!-- image --><img class="block" id="u104_img" src="images/font-crop-u104.jpg?crc=319324435" alt="" data-heightwidthratio="1.0798319327731092" data-image-width="238" data-image-height="257"/></a>
-   <div class="verticalspacer" data-offset-top="378" data-content-above-spacer="378" data-content-below-spacer="121" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+  <div class="clearfix borderbox" id="page"><!-- group -->
+   <div class="clip_frame grpelem" id="u136"><!-- image -->
+    <img class="block" id="u136_img" src="images/giphy.gif?crc=394448869" alt="" data-heightwidthratio="0.5620767494356659" data-image-width="443" data-image-height="249"/>
+   </div>
+   <div class="clearfix grpelem" id="u114-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+    <p>(under construction)</p>
+   </div>
+   <div class="verticalspacer" data-offset-top="295" data-content-above-spacer="360" data-content-below-spacer="205" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
