--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3952315787" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4050434439" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clip_frame grpelem" id="u136"><!-- image -->
-    <img class="block" id="u136_img" src="images/giphy.gif?crc=394448869" alt="" data-heightwidthratio="0.5620767494356659" data-image-width="443" data-image-height="249"/>
-   </div>
+   <a class="nonblock nontext clip_frame grpelem" id="u136" href="http://youtube.com/relictive"><!-- image --><img class="block" id="u136_img" src="images/giphy.gif?crc=394448869" alt="" data-heightwidthratio="0.5620767494356659" data-image-width="443" data-image-height="249"/></a>
    <div class="clearfix grpelem" id="u114-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
     <p>(under construction)</p>
    </div>
-   <div class="verticalspacer" data-offset-top="295" data-content-above-spacer="360" data-content-below-spacer="205" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="360" data-content-above-spacer="360" data-content-below-spacer="139" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
