--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4050434439" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=82893050" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <a class="nonblock nontext clip_frame grpelem" id="u136" href="http://youtube.com/relictive"><!-- image --><img class="block" id="u136_img" src="images/giphy.gif?crc=394448869" alt="" data-heightwidthratio="0.5620767494356659" data-image-width="443" data-image-height="249"/></a>
+   <a class="nonblock nontext clip_frame grpelem" id="u136" href="http://youtube.com/relictive" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- image --><img class="block" id="u136_img" src="images/giphy.gif?crc=394448869" alt="" width="443" height="249"/></a>
    <div class="clearfix grpelem" id="u114-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
     <p>(under construction)</p>
    </div>
